--- a/index.html
+++ b/index.html
@@ -1,112 +1,355 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
     <title>Body Sport Tech</title>
 </head>
+
 <body>
     <header>
-        <nav>
+        <button class="toggle">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        <nav class="menu-lateral">
             <ul>
                 <li>
                     <a href="#">Sobre o Projeto</a>
                 </li>
                 <li>
-                    <a href="#">Alimentação</a>
+                    <a href="#">Futebol</a>
                 </li>
                 <li>
                     <a href="#">Capoeira</a>
                 </li>
                 <li>
-                    <a href="#">Ciclismo</a>
-                </li>
-                <li>
                     <a href="#">Natação</a>
-                </li>
-                <li>
-                    <a href="#">Vôlei</a>
                 </li>
                 <li>
                     <a href="#">Handebol</a>
                 </li>
                 <li>
-                    <a href="#">Futebol</a>
+                    <a href="#"> Basquete</a>
                 </li>
                 <li>
-                    <a href="#">Basquete</a>
+                    <a href="#">Vôlei</a>
+                </li>
+                <li>
+                    <a href="#">Ciclismo</a>
+                </li>
+                <li>
+                    <a href="#"> Alimentação</a>
                 </li>
             </ul>
-            <p>
-                <button>
-                    Log-In
-                </button>
-            </p>
         </nav>
     </header>
+    <div class="background"></div>
     <main>
         <section class="topo">
             <h1>
                 BODY SPORT TECH
             </h1>
-            <p>
-                O guia gratuito do esportista iniciante
-            </p>
+        </section>
+        <section class="esportes">
             <ul>
                 <li>
-                    <img src="imagem/capoeira_boneco.png" alt="Boneco fazendo capoeira">
+                    <img src="imagem/boneco_capoeira.png" alt="Boneco Capoeira">
                     <p>
                         Capoeira
                     </p>
                 </li>
                 <li>
-                    <img src="imagem/ciclista.png" alt="Boneco ciclista">
+                    <img src="imagem/Vector.png" alt="Ciclista">
                     <p>
                         Ciclismo
                     </p>
                 </li>
                 <li>
-                    <img src="imagem/nadador.png" alt="Boneco fazendo natação">
+                    <img src="imagem/Vector (1).png" alt="Natação">
                     <p>
                         Natação
                     </p>
                 </li>
                 <li>
-                    <img src="imagem/handebol_boneco.png" alt="Boneco fazendo handebol">
+                    <img src="imagem/boneco_handebol.png" alt="Boneco Handebol">
                     <p>
                         Handebol
                     </p>
                 </li>
                 <li>
-                    <img src="imagem/bola_volei.png" alt="Bola de vôlei">
+                    <img src="imagem/Vector (2).png" alt="Bola de Vôlei">
                     <p>
                         Vôlei
                     </p>
                 </li>
                 <li>
-                    <img src="imagem/bola_futebol.png" alt="Bola de futebol">
+                    <img src="imagem/Vector (3).png" alt="Bola de Futebol">
                     <p>
                         Futebol
                     </p>
                 </li>
                 <li>
-                    <img src="imagem/bola_basquete.png" alt="Bola de basquete">
+                    <img src="imagem/Vector (4).png" alt="Bola de Basquete">
                     <p>
                         Basquete
                     </p>
                 </li>
             </ul>
         </section>
-        <section class="detalhes">
+        <section class="body">
             <h2>
-                Descubra todos os detalhes do seu esporte e veja como começar!
+                O Que é a Body Sport Tech?
             </h2>
+            <p>
+                A Body Sport Tech nasceu com um propósito simples: tornar o esporte acessível para todos. Acreditamos
+                que cuidar do corpo é cuidar de si mesmo, e que todos devem ter a oportunidade de viver de forma mais
+                ativa, saudável e conectada. Procuramos sempre promover a acessibilidade aos nossos atletas de forma
+                gratuita, oferecemos soluções que aproximam as pessoas do esporte e do seu próprio bem-estar físico —
+                sem barreiras.
+            </p>
+
+            <h3>
+                Descubra todos os detalhes do seu esporte e veja como começar!
+            </h3>
             <ul>
                 <li>
-                    
+                    <img src="imagem/Mask group.png" alt="Jogador de Basquete">
+                    <h4>
+                        Basquete
+                    </h4>
+                    <p>
+                        Desenvolve altura, agilidade e precisão através de jogadas estratégicas.
+                    </p>
+                    <p>
+                        <a href="#">Saiba Mais</a>
+                    </p>
+                </li>
+                <li>
+                    <img src="imagem/image 92.png" alt="Capoerista">
+                    <h4>
+                        Capoeira
+                    </h4>
+                    <p>
+                        Desenvolve altura, agilidade e precisão através de jogadas estratégicas.
+                    </p>
+                    <p>
+                        <a href="#">Saiba Mais</a>
+                    </p>
+                </li>
+                <li>
+                    <img src="imagem/Frame 16.png" alt="Jogador de Handebol">
+                    <h4>
+                        Handebol
+                    </h4>
+                    <p>
+                        Desenvolve altura, agilidade e precisão através de jogadas estratégicas.
+                    </p>
+                    <p>
+                        <a href="#">Saiba Mais</a>
+                    </p>
+                </li>
+                <li>
+                    <img src="imagem/Mask group (1).png" alt="Alimentos">
+                    <h4>
+                        Alimentação
+                    </h4>
+                    <p>
+                        Desenvolve altura, agilidade e precisão através de jogadas estratégicas.
+                    </p>
+                    <p>
+                        <a href="#">Saiba Mais</a>
+                    </p>
+                </li>
+                <li>
+                    <img src="imagem/Frame 22.png" alt="Ciclista">
+                    <h4>
+                        Ciclismo
+                    </h4>
+                    <p>
+                        Desenvolve altura, agilidade e precisão através de jogadas estratégicas.
+                    </p>
+                    <p>
+                        <a href="#">Saiba Mais</a>
+                    </p>
+                </li>
+                <li>
+                    <img src="imagem/Frame 20.png" alt="Jogador de Vôlei">
+                    <h4>
+                        Vôlei
+                    </h4>
+                    <p>
+                        Desenvolve altura, agilidade e precisão através de jogadas estratégicas.
+                    </p>
+                    <p>
+                        <a href="#">Saiba Mais</a>
+                    </p>
+                </li>
+                <li>
+                    <img src="imagem/Frame 18.png" alt="Nadador">
+                    <h4>
+                        Natação
+                    </h4>
+                    <p>
+                        Desenvolve altura, agilidade e precisão através de jogadas estratégicas.
+                    </p>
+                    <p>
+                        <a href="#">Saiba Mais</a>
+                    </p>
+                </li>
+                <li>
+                    <img src="imagem/Frame 25.png" alt="Jogador de Futebol">
+                    <h4>
+                        Futebol
+                    </h4>
+                    <p>
+                        Desenvolve altura, agilidade e precisão através de jogadas estratégicas.
+                    </p>
+                    <p>
+                        <a href="#">Saiba Mais</a>
+                    </p>
                 </li>
             </ul>
         </section>
+        <section class="escolher">
+            <h2>
+                Por Que Escolher Body Sport Tech?
+            </h2>
+            <p>
+                Nossa abordagem única combina tecnologia, conhecimento científico e paixão pelo esporte
+            </p>
+            <ul>
+                <li>
+                    <img src="imagem/heart.png" alt="Coração">
+                    <h3>
+                        Bem-Estar Completo
+                    </h3>
+                    <p>
+                        Cuidamos da sua saúde física e mental através de práticas esportivas equilibradas e
+                        sustentáveis.
+                    </p>
+                </li>
+                <li>
+                    <img src="imagem/people.png" alt="Pessoas">
+                    <h3>
+                        Conheça-nos
+                    </h3>
+                    <p>
+                        Surgimos para ajudar você a cuidar da saúde física, promovendo bem-estar, equilíbrio e qualidade
+                        de vida.
+                    </p>
+                </li>
+                <li>
+                    <img src="imagem/alvo.png" alt="Alvo">
+                    <h3>
+                        Objetivos Personalizados
+                    </h3>
+                    <p>
+                        Defina metas realistas e acompanhe seu progresso com ferramentas especializadas.
+                    </p>
+                </li>
+                <li>
+                    <img src="imagem/rain.png" alt="Raio">
+                    <h3>
+                        Resultados Rápidos
+                    </h3>
+                    <p>
+                        Metodologias comprovadas que aceleram seus resultados de forma saudável e duradoura.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <section class="sobre">
+            <h2>
+                Se quiser saber mais sobre a importância dos exercícios físicos na saúde mental, assista o vídeo abaixo:
+            </h2>
+            <video src=""></video>
+            <div>
+                <h3>
+                    Você Sabia Que:
+                </h3>
+                <p>
+                    A atividade física é algo que todos nós praticamos no dia a dia? Mesmo de forma involuntária como
+                    caminhar para chegar a algum lugar ou como se movimentar pela casa para pegar algo ou para limpá-la.
+                    As vezes nem reparamos que coisas tão "pequenas" como essas, são atividades físicas que vocẽ faz por
+                    você estar se movimentando mesmo que seja um pouco.
+                </p>
+            </div>
+            <div>
+                <img src="imagem/black-woman-laugh-happy-with-slam-ball-studio-white-background-fitness-exercise-health-female-person-smile-confident-with-workout-progress-results-wellness_590464-368558-removebg-preview(1) 1.png"
+                    alt="Mulher">
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="redes">
+            <h4>
+                Body Sport Tech
+            </h4>
+            <p>
+                Transformando vidas através do esporte e bem-estar. Sua jornada para uma vida mais saudável começa aqui.
+            </p>
+            <nav>
+                <p>
+                    <a href="#"><span class="fa-brands fa-instagram"></span></a>
+                    <a href="#"><span class="fa-brands fa-twitter"></span></a>
+                </p>
+            </nav>
+            <p>
+                Tecnologia e performance a serviço do seu corpo.
+            </p>
+        </div>
+        <div class="contato">
+            <p>
+                Contato:
+            </p>
+            <p>
+                bodysporttech@gmail.com
+            </p>
+            <p>
+                Body Sport Tech © 2025. Todos os direitos reservados. 
+            </p>
+        </div>
+        <div class="esporte">
+            <nav>
+            <ul>
+                <li>
+                    <a href="#">Sobre o Projeto</a>
+                </li>
+                <li>
+                    <a href="#">Futebol</a>
+                </li>
+                <li>
+                    <a href="#">Capoeira</a>
+                </li>
+                <li>
+                    <a href="#">Natação</a>
+                </li>
+                <li>
+                    <a href="#">Handebol</a>
+                </li>
+                <li>
+                    <a href="#"> Basquete</a>
+                </li>
+                <li>
+                    <a href="#">Vôlei</a>
+                </li>
+                <li>
+                    <a href="#">Ciclismo</a>
+                </li>
+                <li>
+                    <a href="#"> Alimentação</a>
+                </li>
+            </ul>
+        </nav>
+        </div>
+    </footer>
 </body>
+<script src="script.js"></script>
+
 </html>
